Prevent text overlap of footer and paragraph tags
When the "View this project on GitHub" and "This project is maintained by" are moved to the same column (width > 960px), an overlap occurs. By changing where the bottom occurs, this overflow is prevented. I decreased the bottom from 50px to 30px since most bottom paddings are 20px.

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -188,7 +188,7 @@ strong {
 section {
   width:500px;
   float:right;
-  padding-bottom:50px;
+  padding-bottom:30px;
 }
 
 small {
@@ -206,7 +206,7 @@ footer {
   width:270px;
   float:left;
   position:fixed;
-  bottom:50px;
+  bottom:30px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
